--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
            </button>
        </div>
        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-           <li><a href="/waiter">Waiter</a></li>
+           <li><a href="/">Waiter</a></li>
            <li><a href="/kitchen">Kitchen</a></li>
        </ul>
    </div>
@@ -56,6 +56,7 @@
 <script src="/public/js/controllers/food.js"></script>
 <script src="/public/js/controllers/waiter.js"></script>
 <script src="/public/js/controllers/bill.js"></script>
+<script src="/public/js/controllers/kitchen.js"></script>
 
 </body>
 </html>
