--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/style.css"> <!-- custom styles -->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/ materialize.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
 
     <!-- JS -->
@@ -26,7 +26,7 @@
     -->
     
 </head>
-<body ng-app="restaurantPOS" ng-controller="MainController">
+<body ng-app="restaurantPOS" ng-controller="newOrderController">
 <!-- NAVBAR -->
 <!-- HEADER -->
 <div class="navbar navbar-default navbar-static-top">
@@ -42,8 +42,8 @@
            </button>
        </div>
        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-           <li><a href="/register" class="navlink">Register</a></li>
-           <li><a href="/login" class="navlink">Login</a></li>
+           <li><a href="/" class="navlink">Waiter</a></li>
+           <li><a href="/kitchen" class="navlink">Kitchen</a></li>
        </ul>
    </div>
 </div>
@@ -51,8 +51,14 @@
 <!-- ANGULAR DYNAMIC CONTENT -->
 <div ui-view></div>
 
+<script src="/public/js/routes.js"></script>
 <script src="/public/js/app.js"></script>
-<script src="/public/js/controllers/MainController.js"></script>
+<script src="/public/js/controllers/newOrder.js"></script>
+<script src="/public/js/controllers/drinks.js"></script>
+<script src="/public/js/controllers/food.js"></script>
+<script src="/public/js/controllers/waiter.js"></script>
+<script src="/public/js/controllers/bill.js"></script>
+<script src="/public/js/controllers/kitchen.js"></script>
 
 </body>
 </html>
