--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/css/style.css"> <!-- custom styles -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- custom styles -->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/ materialize.min.css"> -->
 
 
@@ -51,8 +51,8 @@
 <!-- ANGULAR DYNAMIC CONTENT -->
 <div ui-view></div>
 
-<script src="/public/js/app.js"></script>
-<script src="/public/js/controllers/MainController.js"></script>
+<script src="/js/app.js"></script>
+<script src="/js/controllers/MainController.js"></script>
 
 </body>
 </html>
