changes on the frontend

--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/css/style.css"> <!-- custom styles -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- custom styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
 
@@ -51,14 +51,14 @@
 <!-- ANGULAR DYNAMIC CONTENT -->
 <div ui-view></div>
 
-<script src="/public/js/routes.js"></script>
-<script src="/public/js/app.js"></script>
-<script src="/public/js/controllers/newOrder.js"></script>
-<script src="/public/js/controllers/drinks.js"></script>
-<script src="/public/js/controllers/food.js"></script>
-<script src="/public/js/controllers/waiter.js"></script>
-<script src="/public/js/controllers/bill.js"></script>
-<script src="/public/js/controllers/kitchen.js"></script>
+<script src="/app/js/routes.js"></script>
+<script src="/app/js/app.js"></script>
+<script src="/app/js/controllers/newOrder.js"></script>
+<script src="/app/js/controllers/drinks.js"></script>
+<script src="/app/js/controllers/food.js"></script>
+<script src="/app/js/controllers/waiter.js"></script>
+<script src="/app/js/controllers/bill.js"></script>
+<script src="/app/js/controllers/kitchen.js"></script>
 
 </body>
 </html>
