updated menu view to categorize food by category

--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -42,8 +42,9 @@
            </button>
        </div>
        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-           <li><a href="/" class="navlink">Waiter</a></li>
-           <li><a href="/kitchen" class="navlink">Kitchen</a></li>
+           <li><a href="/app/" class="navlink">Waiter</a></li>
+           <li><a href="/app/kitchen" class="navlink">Kitchen</a></li>
+           <li><a href="/logout">Logout</a></li>
        </ul>
    </div>
 </div>
