edited kitchen view & controller

--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -44,6 +44,7 @@
        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
            <li><a href="/app/" class="navlink">Waiter</a></li>
            <li><a href="/app/kitchen" class="navlink">Kitchen</a></li>
+           <li><a href="/app/admin" class="navlink">Admin</a></li>
            <li><a href="/logout">Logout</a></li>
        </ul>
    </div>
