--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -15,7 +15,7 @@
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
     <!--<script src="https://code.angularjs.org/1.4.5/angular-route.js"></script> -->
-    <!-- UI-Router -->
+    <!-- UI-Router-->
     <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
 
     <!-- ANGULAR CUSTOM -->
@@ -61,6 +61,8 @@
 <script src="/app/js/controllers/waiter.js"></script>
 <script src="/app/js/controllers/bill.js"></script>
 <script src="/app/js/controllers/kitchen.js"></script>
+<script src="/app/lib/angular-timer.js"></script>
+
 
 </body>
 </html>
