integrated menu editor

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/style.css"> <!-- custom styles -->
-	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/ materialize.min.css"> -->
+	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"> -->
 
 
 	<!-- JS -->
@@ -43,6 +43,7 @@
 			</div>
 			<ul class="nav navbar-nav navbar-right collapse navbar-collapse">
 				<li><a href="/app" class="navlink" target="_self">App</a></li>
+				<li><a href="/menu-editor" class="navlink">Menu Editor</a></li>
 				<li><a href="/user-list" class="navlink">User List</a></li>
 				<li><a href="/register" class="navlink">Register</a></li>
 				<li><a href="/login" class="navlink">Login</a></li>
