--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -7,16 +7,24 @@
     <title>Restaurant POS</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css"> <!-- custom styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
 
+
     <!-- JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
     <!--<script src="https://code.angularjs.org/1.4.5/angular-route.js"></script> -->
     <!-- UI-Router-->
     <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+    
+
 
     <!-- ANGULAR CUSTOM -->
     <!--
@@ -29,11 +37,29 @@
 <body ng-app="restaurantPOS" ng-controller="newOrderController">
 <!-- NAVBAR -->
 <!-- HEADER -->
-<div class="navbar navbar-default navbar-static-top">
+<nav role="navigation">
+      <div class="nav-wrapper container">
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/app/" class="navlink">Waiter</a></li>
+           <li><a href="/app/kitchen" class="navlink">Kitchen</a></li>
+           <li><a href="/" target="_self">Admin</a></li>
+           <li><a href="/logout" target="_self">Logout</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav teal lighten-2">
+          <li><a href="/app/" class="navlink">Waiter</a></li>
+           <li><a href="/app/kitchen" class="navlink">Kitchen</a></li>
+           <li><a href="/" target="_self">Admin</a></li>
+           <li><a href="/logout" target="_self">Logout</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+    <!--
+<div class="nav-wrapper">
    <div class="container">
        <div class="navbar-header">
            <a class="navbar-brand navlink" href="/">Home</a>
-           <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
+           <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE 
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                <span class="sr-only">Toggle Navigation</span>
                <span class='icon-bar'></span>
@@ -48,7 +74,7 @@
            <li><a href="/logout">Logout</a></li>
        </ul>
    </div>
-</div>
+</div>-->
 
 <!-- ANGULAR DYNAMIC CONTENT -->
 <div ui-view></div>
@@ -63,6 +89,17 @@
 <script src="/app/js/controllers/kitchen.js"></script>
 <script src="/app/lib/angular-timer.js"></script>
 
+<script>
+$(document).ready(function(){
+  $('.button-collapse').sideNav({
+    menuWidth: 300, // Default is 240
+    edge: 'right', // Choose the horizontal origin
+    closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+    }
+  );  
+})
+
+</script>
 
 </body>
 </html>
