--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<!-- JS -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 	<!--<script src="https://code.angularjs.org/1.4.5/angular-route.js"></script> -->
 	<!-- UI-Router -->
 	<script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
