fixed merge conflict

--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -45,7 +45,7 @@
            <li><a href="/" target="_self">Admin</a></li>
            <li><a href="/logout" target="_self">Logout</a></li>
         </ul>
-        <ul id="nav-mobile" class="side-nav teal lighten-2">
+        <ul id="nav-mobile" class="side-nav red lighten-2">
           <li><a href="/app/" class="navlink">Waiter</a></li>
            <li><a href="/app/kitchen" class="navlink">Kitchen</a></li>
            <li><a href="/" target="_self">Admin</a></li>
