--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			<li><a href="/register" class="navlink">Register</a></li>
 			<li><a href="/login" class="navlink">Login</a></li>
 	      </ul>
-	      <ul id="nav-mobile" class="side-nav teal lighten-2">
+	      <ul id="nav-mobile" class="side-nav red lighten-2">
 	        <li><a href="/app" target="_self">App</a></li>
 			<li><a href="/menu-editor" class="navlink">Menu Editor</a></li>
 			<li><a href="/user-list" class="navlink">User List</a></li>
